mise en plce stripe et amelioration logique commande
